####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = prime_number_generation 

EXTRA_DIST = prime_number_generation.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO prime_number_generation.lsm 

####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign
