####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = prime_number_generation
prime_number_generation_SOURCES = main.c 
prime_number_generation_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.c 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = prime_number_generation
